fix 'remember me' checkbox alignment

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -167,17 +167,6 @@
     .user_email {
       margin-bottom: 5px;
     }
-    .remember {
-      input {
-        margin: 13px 0 0 15px;
-        float: left;
-      }
-      label {
-        float: left;
-        text-align: left;
-        margin-left: -7px;
-      }
-    }
     .devise-options {
       margin-left: 15px;
     }
